--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Set Kubernetes Context
         uses: Azure/k8s-set-context@v3.0
         with:
-          kubeconfig: ${{secrets.K8S_CONFIG}}
+          kubeconfig: ${{secrets.KUBE_CONFIG}}
 
       - name: Deploy
         uses: Azure/k8s-deploy@v4
