added image pull secrets

--- a/infrastructure/repsy-docs.yml
+++ b/infrastructure/repsy-docs.yml
@@ -23,6 +23,8 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 80
+      imagePullSecrets:
+        - name: gitlab-auth
 ---
 apiVersion: v1
 kind: Service
