--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,13 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - github-actions
+      - main
 
 jobs:
-  deploy:
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/github-actions'
+  deploy-prod:
+    timeout-minutes: 5
+    environment: prod
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -31,6 +33,16 @@ jobs:
         uses: docker/build-push-action@v5.0.0
         with:
           push: true
-          tags: registry.gitlab.com/fria/repsy/repsy-cloud/repsy-maven-node:${{ env.DOCKER_IMAGE_TAG }},registry.gitlab.com/fria/repsy/repsy-cloud/repsy-docs:latest
+          tags: registry.gitlab.com/fria/repsy/repsy-cloud/repsy-docs:${{ env.DOCKER_IMAGE_TAG }},registry.gitlab.com/fria/repsy/repsy-cloud/repsy-docs:latest
 
+      - name: Set Kubernetes Context
+        uses: Azure/k8s-set-context@v3.0
+        with:
+          kubeconfig: ${{secrets.KUBE_CONFIG}}
 
+      - name: Deploy
+        uses: Azure/k8s-deploy@v4
+        with:
+          namespace: repsy-docs
+          manifests: infrastructure/repsy-docs.yml
+          images: registry.gitlab.com/fria/repsy/repsy-cloud/repsy-docs:${{ env.DOCKER_IMAGE_TAG }}
