--- a/.github/workflows/vercel-deploy-docs-prod.yml
+++ b/.github/workflows/vercel-deploy-docs-prod.yml
@@ -11,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: ./panel-frontend
+                working-directory: ./
         steps:
             - uses: actions/checkout@v3
             - name: Install Vercel CLI
