--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,10 @@ jobs:
         run: |
           wget -q --no-check-certificate https://github.com/matcornic/hugo-theme-learn/archive/2.5.0.tar.gz
           rm -rf themes/*
-          tar xvf 2.5.0.tar.gz -C themes
-          mv themes/hugo-theme-learn-2.5.0 themes/hugo-theme-learn
-          rm 2.5.0.tar.gz
+          mv 2.5.0.tar.gz themes/
+          cd themes
+          tar xvf 2.5.0.tar.gz
+          mv hugo-theme-learn-2.5.0 hugo-theme-learn
 
       - name: Build Hugo Site
         run: hugo --minify
