--- a/.github/workflows/vercel-deploy-docs-dev.yml
+++ b/.github/workflows/vercel-deploy-docs-dev.yml
@@ -18,6 +18,14 @@ jobs:
         working-directory: ./
     steps:
       - uses: actions/checkout@v3
+      - name: Download and Setup Hugo Theme
+        run: |
+          wget -q --no-check-certificate https://github.com/matcornic/hugo-theme-learn/archive/2.5.0.tar.gz
+          rm -rf themes/*
+          mv 2.5.0.tar.gz themes/
+          cd themes
+          tar xvf 2.5.0.tar.gz
+          mv hugo-theme-learn-2.5.0 hugo-theme-learn
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Deploy to Preview
