--- a/.github/workflows/vercel-deploy-docs-prod.yml
+++ b/.github/workflows/vercel-deploy-docs-prod.yml
@@ -8,6 +8,8 @@ on:
     types:
       - completed
   push:
+    tags:
+      - '*'
     branches:
       - '*'
 jobs:
@@ -32,5 +34,5 @@ jobs:
         if: github.ref != 'refs/heads/main'
         run: vercel --token ${{ secrets.VERCEL_TOKEN }} --yes
       - name: Deploy to Prod
-        if: github.ref == 'refs/heads/main'
+        if: startsWith(github.ref, 'refs/tags/') && github.ref == 'refs/head/main'
         run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes
