--- a/.github/workflows/vercel-deploy-docs-dev.yml
+++ b/.github/workflows/vercel-deploy-docs-dev.yml
@@ -3,6 +3,7 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_REPSY_DOCS_DEV_PROJECT_ID }}
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: [ "Install Hugo and Theme" ]
     types:
@@ -10,6 +11,9 @@ on:
   push:
     branches:
       - '*'
+  pull_request:
+    branches:
+        - '*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -32,5 +36,4 @@ jobs:
         run: npm install --global vercel@latest
 
       - name: Deploy to Vercel
-        if: github.ref == 'refs/heads/main'
         run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes
