--- a/.github/workflows/vercel-deploy-docs-prod.yml
+++ b/.github/workflows/vercel-deploy-docs-prod.yml
@@ -3,15 +3,14 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_REPSY_DOCS_PROD_PROJECT_ID }}
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: [ "Install Hugo and Theme" ]
     types:
       - completed
   push:
-    tags:
-      - '*'
     branches:
-      - '*'
+      - 'main'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -34,5 +33,4 @@ jobs:
         run: npm install --global vercel@latest
 
       - name: Deploy to Vercel
-        if: startsWith(github.ref, 'refs/tags/') && github.ref == 'refs/head/main'
         run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes
