--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,8 @@
 baseURL = "https://docs.repsy.io/"
 languageCode = "en-us"
 title = "Repsy Documentation"
+theme = "hugo-theme-learn"
+repo = "https://github.com/matcornic/hugo-theme-learn"
 
 [outputs]
 home = ["HTML", "RSS", "JSON"]
